# server/common/api.yml
@@ -1289,6 +1289,64 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /tax:
+    get:
+      security:
+        - bearerAuth: []
+      tags:
+        - Tax
+      description: Get tax
+      responses:
+        200:
+          description: Return the tax
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Example'
+        4XX:
+          description: Example not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        5XX:
+          description: Example not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+    put:
+      security:
+        - bearerAuth: []
+      tags:
+        - Tax
+      description: Update tax
+      requestBody:
+        description: Update tax
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TaxBody'
+      responses:
+        200:
+          description: Return the Updated tax
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Example'
+        4XX:
+          description: Example not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        5XX:
+          description: Example not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   securitySchemes:
     bearerAuth: # arbitrary name for the security scheme
@@ -1591,3 +1649,12 @@ components:
         status:
           type: string
           example: uuidasefjaseklfajsef
+
+    TaxBody:
+      type: object
+      required:
+        - serviceChargePercent
+      properties:
+        serviceChargePercent:
+          type: number
+          example: 3
